2002-08-29  John Levon  <levon@movementarian.org>

	* QInclude.C: remove some wrong code removed from xforms
 
2002-08-29  John Levon  <levon@movementarian.org>

	* qfont_metrics.C: add per char ascent/descent
 
2002-08-28  John Levon  <levon@movementarian.org>

	* QContentPane.C: fix cut-and-paste borkage from
	  LFUN_MOUSE changes
 
2002-08-25  Rob Lahaye  <lahaye@snu.ac.kr>

	* QLImage.C: replace redundant xoffset_l and yoffset_t
	calculation by something better.

2002-08-25  John Levon  <levon@movementarian.org>

	* FileDialog.C:
	* FileDialog_private.h:
	* FileDialog_private.C: disable non-sync code due
	  to Qt bug. Add support for buttons
 
2002-08-25  John Levon  <levon@movementarian.org>

	* QLPopupMenu.C: implement optional() support
 
	* TODO: update
 
2002-08-25  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* Menubar_pimpl.h:
	* Menubar_pimpl.C:
	* QLPopupMenu.h:
	* QLPopupMenu.C: Populate menus upon open
 
2002-08-25  John Levon  <levon@movementarian.org>

	* qlkey.h: add A-Z into string_to_qkey

	* QLyXKeySym.h:
	* QLyXKeySym.C: remove crap again
 
2002-08-25  John Levon  <levon@movementarian.org>

	* QLyXKeySym.h:
	* QLyXKeySym.C:
	* QContentPane.C: revert some wrong direction stuff and try
	  again. STILL BROKEN :(
 
2002-08-25  John Levon  <levon@movementarian.org>

	* QGraphics.C:
	* ui/QGraphicsDialog.ui: update, and some UI improvements
 
2002-08-23  Rob Lahaye  <lahaye@snu.ac.kr>

	* lengthcombo.C: apply changes to "enum UNIT" in src/lyxlength.h

	* QLImage.C:
	* QGraphics.C: Implement changes for new xforms graphics dialog
	(NB: Qt Graphics dialog itself is NOT YET updated!).

2002-08-15  Angus Leeming  <leeming@lyx.org>

	* lyx_gui.C (hexname): enable previews to work!

2002-08-15  Angus Leeming  <leeming@lyx.org>

	* Dialogs.C:
	* Dialogs2.C
	* Dialogs_impl.h: the brave new world of Dialog creation.

	* guiapi.C: discard.

	* Makefile.am: add new files Dialogs2.C Dialogs_impl.h and
	remove guiapi.C.
