@@ -1,5 +1,10 @@
 2002-08-29  John Levon  <levon@movementarian.org>
 
+	* QContentPane.C:
+	* QContentPane.h: implement triple click
+ 
+2002-08-29  John Levon  <levon@movementarian.org>
+
 	* QInclude.C: remove some wrong code removed from xforms
  
 2002-08-29  John Levon  <levon@movementarian.org>
